--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
   </head>
   <body>
-    <a href="catchem.html">Catch Em'(Aim Tracking Game)</a>
-    <script src="sketch.js"></script>
-    <script src="class1.js"></script>
+    <a href="JackAnderer-McClelland.github.io/catchem.html">Catch Em'(Aim Tracking Game)</a>
+  
    
 	</body>
 </html>
