--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="snake.html">Snake Game</a></li>
                 <li><a href="kpong.html">2-Player Pong</a></li>
                 <li><a href="randomwrd.html">Idk even know what this is...</a></li>
+                <li><a href="gameoflife.html">Game Of Life</a></li>
             </ul>
             </mark>
     </body>
