--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <a href="about.html" class="dropbtn">About</a>
 </center>
-<marquee class="marquee">WELCOME TO MY SITE!</marquee>
+<marquee class="marquee">Welcome to my site!</marquee>
 
 
 
