--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <p style="color:gold">Jack Anderer-McClelland</p>
 <center>
     <a href="index.html" class="dropbtn">Home</a>
     <div class="dropdown">
